# incepto

./: README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.next/: trace
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/client-development-fallback/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: _error.js  middleware-build-manifest.js  pages-manifest.json
.next/server/pages/: _app.js  _document.js  _error.js  app.js  index.js
.next/server/pages/api/: generate.js  solana-generate.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: _error.js  webpack.js
.next/static/chunks/pages/: _app.js  app.js  index.js
.next/static/webpack/: 629b97acf1c473a2.webpack.hot-update.json  a79187c00490c73b.webpack.hot-update.json  webpack.41ceb3fdd2f85d12.hot-update.js  webpack.5f518968200ca270.hot-update.js  webpack.629b97acf1c473a2.hot-update.js  webpack.7b6ead81411cc406.hot-update.js  webpack.a79187c00490c73b.hot-update.js
.next/static/webpack/pages/: _app.a79187c00490c73b.hot-update.js  (+1 more)
codesmith/: __init__.py  cli.py  generator.py  models.py
codesmith/templates/express/: app.ts.j2  package.json.j2
codesmith/templates/fastapi/: main.py.j2  models.py.j2
components/: Demo.tsx  SolanaStudio.tsx  Terminal.tsx
components/SolanaStudio/: index.tsx
components/ui/: card.tsx
lib/: mockData.ts
pages/: _document.tsx  app.tsx  index.tsx  landing.tsx
pages/api/: generate.ts  solana-generate.ts
styles/: globals.css
