[tool.poetry]
name = "codesmith"
version = "0.1.0"
description = "Domain-aware code scaffolding tool that generates project structures based on domain descriptions"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
jinja2 = "^3.1.2"
pydantic = "^2.5.2"
rich = "^13.7.0"
openai = "^1.3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codesmith = "codesmith.cli:main" 